fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,8 @@ html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -155,6 +157,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   overflow-x: hidden;
+  width: 100%;
 }
 
 img {
